# agent-orchestrator

./: .env.example  .gitignore  README.md  compound_interest.py  pyproject.toml
dashboard/: index.html  package-lock.json  package.json  vite.config.js
dashboard/src/: App.css  App.jsx
dashboard/src/components/: DAGGraph.jsx  EventTimeline.jsx  MetricsDashboard.jsx
examples/: investment_report.py  multi_agent_debate.py  simple_pipeline.py
src/orchestrator/: __init__.py  cli.py
src/orchestrator/agents/: __init__.py  coding.py  critic.py  finance.py  planner.py  research.py  reviewer.py  router.py  synthesizer.py
src/orchestrator/api/: schemas.py  server.py
src/orchestrator/core/: __init__.py  agent.py  memory.py  state.py  task.py  tool.py
src/orchestrator/cost/: __init__.py  tracker.py
src/orchestrator/debate/: __init__.py  runner.py  types.py
src/orchestrator/distributed/: __init__.py  executor.py  queue.py  types.py
src/orchestrator/engine/: __init__.py  orchestrator.py  retry.py
src/orchestrator/evaluation/: __init__.py  evaluator.py
src/orchestrator/events/: __init__.py  event_bus.py  types.py
src/orchestrator/llm/: __init__.py  anthropic_llm.py  base.py  huggingface_llm.py  mock_llm.py  openai_llm.py  openrouter_llm.py
src/orchestrator/marketplace/: __init__.py  marketplace.py  types.py
src/orchestrator/mcp/: __init__.py  (+3 more)
tests/unit/: test_core.py  test_cost.py  test_debate.py  test_distributed.py  test_evaluation.py  test_events.py  test_marketplace.py  test_mcp.py  test_memory.py  test_planner.py  test_retry.py  test_sandbox.py
(+21 files in other folders)
