[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orchestrator"]

[project]
name = "agent-orchestrator"
version = "0.1.0"
description = "An AI Agent Orchestrator — coordinate multiple agents, tools, workflows, and humans"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "openai>=1.0",
    "anthropic>=0.30",
    "chromadb>=0.5",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "typer>=0.12",
    "rich>=13.0",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.3",
    "mypy>=1.8",
]
test = ["pytest>=8.0", "pytest-asyncio>=0.24", "pytest-cov>=5.0"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
exclude = ["tests/", "examples/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[project.scripts]
orchestrator = "orchestrator.cli:app"
